--- a/results/assembly_eval_quast/icarus.html
+++ b/results/assembly_eval_quast/icarus.html
@@ -1867,6 +1867,14 @@
 				</tbody>
 			</table>
 			<br>
+				<div class="contig_alignment_viewer_panel">
+				<a href="icarus_viewers/alignment_viewer.html">Contig alignment viewer</a>
+				  <div class="reference_details">
+					  <p>Aligned to sequences from GCF_009734005.1_ASM973400v2_genomic.fna</p>
+					  <p>Fragments: 2, length: 2 919 198 bp, mean genome fraction: 85.051%,
+						  misassembled blocks: 289</p>
+				  </div>
+				</div>
 		</div>
 	</div>
 </body>
